# vdx

./: .gitignore  README.md
vdx/: CMakeLists.txt  LICENSE.txt
vdx/docs/: CHANGELOG.md  README.md  TODO.md
vdx/examples/: demo-arrays.vdx  demo-error-index.vdx  demo-error.vdx  demo-objects.vdx  demo-v008.vdx  hello.vdx
vdx/installer/: wix_path_patch.xml
vdx/src/: ast.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  token.h
website/: package-lock.json  package.json  vercel.json
website/public/releases/: vdx-0.0.6-win64.msi  vdx-0.0.7-win64.msi  vdx-0.0.8-win64.msi
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/docs/: page.tsx
website/src/app/docs/arrays/: page.tsx
website/src/app/docs/classes/: page.tsx
website/src/app/docs/error-reporting/: page.tsx
website/src/app/docs/for/: page.tsx
website/src/app/docs/functions/: page.tsx
website/src/app/docs/hello-world/: page.tsx
website/src/app/docs/if-elif-else/: page.tsx
website/src/app/docs/installation/: page.tsx
website/src/app/docs/loop-protection/: page.tsx
website/src/app/docs/objects/: page.tsx
website/src/app/docs/operators/: page.tsx
website/src/app/docs/print/: page.tsx
website/src/app/docs/project-structure/: page.tsx
website/src/app/docs/return/: page.tsx
website/src/app/docs/scoping/: page.tsx
website/src/app/docs/this/: page.tsx
website/src/app/docs/types/: page.tsx
website/src/app/docs/unsafe/: page.tsx
website/src/app/download/: page.tsx
website/src/components/: DocPage.tsx
(+3 files in other folders)
